The implementation of using activeUl is complete. Now, the activeUl variable is used to determine which list to work with.
But there is a problem: Violation.
Due to the large amount of cryptocurrency-related data being rendered in activeUl, the browser puts a noticeable load on the system, especially in terms of memory usage.

Possible solutions:
reduce the data set
li.hidden = true
control scroll behavior

--- a/css/modal.css
+++ b/css/modal.css
@@ -134,7 +134,7 @@ form div.row {
     justify-content: space-around;
 }
 
-form div.row div.column {
+form  div.column {
     display: -webkit-flex;
     display: -moz-flex;
     display: -ms-flex;
@@ -153,7 +153,7 @@ form div.row div.column {
     margin: 10px;
 }
 
-form div.row div.column input {
+form div.column input {
     max-width: 150px;
 }
 
