Add crypto pair to local storage Fix input fields by setting autocomplete="off" Close dropdown when clicking outside dropdownOptionsUl Remove class methods getImageByName, getPriceByName, and setCryptoDataByName Set price and icon URL automatically via setCryptoPairPriceAndImage(targetName) in formAutocompleteHandler.js

--- a/css/styles.css
+++ b/css/styles.css
@@ -703,6 +703,7 @@ ul.currencies_grafs {
     overflow-y: auto;
     overflow-x: hidden;
     display: none;
+    border: 1.5px solid white;
 }
 
 .cryptoPairDropdownOptions div ul {
