--- a/css/styles.css
+++ b/css/styles.css
@@ -430,7 +430,7 @@ ul.currencies_grafs {
     -ms-flex-direction: row;
     -o-flex-direction: row;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     -webkit-align-items: center;
     -moz-align-items: center;
     -ms-align-items: center;
@@ -687,14 +687,19 @@ ul.currencies_grafs {
     position: absolute;
     right:10px;
     width:73px;
-    height:25px;
+    height:30px;
     background-color: rgb(98, 91, 105);
     border: 2px solid gray;
+    font-size: 13px;
 }
 
-#cryptoChartCanvas{
-
+#cryptoChartCanvas {
+    margin-top: 20px;
+    width: 100%;
+    height: 100%;
+    display: block;
 }
+
 
 .diagram_container{
     display: flex;
