--- a/css/modal.css
+++ b/css/modal.css
@@ -300,3 +300,177 @@ select {
     font-size: 14px;
     color: #555;
 }
+
+
+@media screen and (max-width: 1050px) {
+  form {
+    max-width: 70vw;
+    width: 90vw;
+    margin: auto;
+    padding: 20px;
+    border-radius: 15px;
+    
+  }
+
+  .file-input-label,
+  .newPairInput {
+    width: 90% !important;
+    font-size: 23px;
+  }
+
+  form div.column {
+    margin: 10px 0;
+  }
+
+  label{
+    font-size: 46px;
+  }
+
+  input {
+    width: 60% !important;
+    font-size: 40px;
+    height:50px !important;
+  }
+
+  input#date{
+    font-size: 37px;
+  }
+
+  form div.column{
+    width: 60% !important;
+  }
+  
+
+  form div.column input {
+    max-width: 100%;
+  }
+
+  .cryptoNameInputsForm{
+    width: 100% !important;
+  }
+
+  .cryptoPairDropdownOptions{
+    width: 100%;
+    max-width: 100%;
+  } 
+
+  .cryptoPairDropdownOptions div{
+    margin-left: 2.5px;
+    height: 200px;
+  }
+
+  .dropdownOptionsUl{
+    font-size: 32px;
+
+  }
+
+  form span {
+    font-size: 55px;
+    top: 10px;
+    right: 20px;
+  }
+
+  .file-input-container {
+    width: 100%;
+  }
+
+  .newPairInput{
+    width: 60% !important;
+    font-size: 35px;
+    height:50px !important;
+  }
+
+  .removeButton{
+    display: block;
+    font-size: 45px;
+    top:0px;
+    right:10px;
+  }
+}
+
+
+@media screen and (max-width: 830px) {
+  form {
+    max-width: 70vw;
+    width: 90vw;
+    margin: auto;
+    padding: 20px;
+    border-radius: 15px;
+    
+  }
+
+  .file-input-label,
+  .newPairInput {
+    width: 90% !important;
+    font-size: 16px;
+  }
+
+  form div.column {
+    margin: 10px 0;
+  }
+
+  label{
+    font-size: 40px;
+  }
+
+  input {
+    width: 60% !important;
+    font-size: 30px;
+    height:50px !important;
+  }
+
+  input#date{
+    font-size: 30px;
+  }
+
+  form div.column{
+    width: 60% !important;
+  }
+  
+
+  form div.column input {
+    max-width: 100%;
+  }
+
+  .cryptoNameInputsForm{
+    width: 100% !important;
+  }
+
+  .cryptoPairDropdownOptions{
+    width: 100%;
+    max-width: 100%;
+  } 
+
+  .cryptoPairDropdownOptions div{
+    margin-left: 2.5px;
+    height: 200px;
+  }
+
+  .dropdownOptionsUl{
+    font-size: 25px;
+
+  }
+
+  form span {
+    font-size: 55px;
+    top: 10px;
+    right: 20px;
+  }
+
+  .file-input-container {
+    width: 100%;
+  }
+
+  .newPairInput{
+    width: 60% !important;
+    font-size: 30px;
+    height:50px !important;
+  }
+
+  .removeButton{
+    display: block;
+    font-size: 40px;
+    top:0px;
+    right:10px;
+  }
+}
