--- a/css/styles.css
+++ b/css/styles.css
@@ -692,10 +692,10 @@ ul.currencies_grafs {
     margin-bottom: 20px;
 }
 
-.graphs_diagrams{
-   padding-top: 10px;
-
+.graphs_diagrams {
+  padding-top: 10px;
 }
+
 
 .cryptoChart{
     width:50%;
@@ -868,7 +868,7 @@ ul.currencies_grafs {
     .big_img_container {
         margin-left: 10px;
         max-width: 450px;
-        background-size: cover; /* или contain, если нужно вписать */
+        background-size: cover; 
         background-repeat: no-repeat;
         background-position: right center;
     }
@@ -904,14 +904,11 @@ ul.currencies_grafs {
 }
 
 @media screen and (max-width: 1115px) {
-    .desktop-layout{}
     .big_img_container {
-        margin-left: 10px;
         max-width: 380px;
 
     }
     .balance_overview {
-        margin-right: 10px;
         margin-left: 5px;
     }
     .records_overview{
@@ -943,33 +940,7 @@ ul.currencies_grafs {
         align-items: center;
     }
 
-    .big_img_container,
-    .balance_overview,
-    .records_overview,
-    .graphs_diagrams {
-        width: 90% !important;
-        margin: 0 auto 20px auto;
-    }
 
-    .big_img_container {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .text_container {
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .big_img_container h1 {
-        font-size: 22px;
-    }
-
-    .balance_overview img {
-        margin: 20px auto;
-    }
 
     .purpleButton {
         width: 90% !important;
@@ -982,8 +953,6 @@ ul.currencies_grafs {
         width: auto;
     }
 
-
-
     table {
         font-size: 12px;
     }
@@ -993,7 +962,7 @@ ul.currencies_grafs {
     }
 
     .desktop-layout {
-    display: none;
+        display: none;
     }
 
     .mobile-layout {
@@ -1112,8 +1081,8 @@ ul.currencies_grafs {
     .mobile-overview{
         max-width: 100%;
         max-height:400px;
-        overflow-y: auto;  /* включаем вертикальный скролл */
-        overflow-x: hidden; /* скрываем горизонтальный скролл */
+        overflow-y: auto; 
+        overflow-x: hidden; 
         padding: 0;
         margin: 0;
         width: 100% !important;
@@ -1148,10 +1117,6 @@ ul.currencies_grafs {
     }
 
     
-
-
-
-
     .slider-wrapper {
             height: auto;
         }
@@ -1287,89 +1252,6 @@ ul.currencies_grafs {
 /* MOBILE BALANCE 830px *//* MOBILE BALANCE 830px *//* MOBILE BALANCE 830px *//* MOBILE BALANCE 830px *//* MOBILE BALANCE 830px *//* MOBILE BALANCE 830px */
 
 @media screen and (max-width: 830px) {
-    section {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .big_img_container,
-    .balance_overview,
-    .records_overview,
-    .graphs_diagrams {
-        width: 90% !important;
-        margin: 0 auto 20px auto;
-    }
-
-    .big_img_container {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .text_container {
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .big_img_container h1 {
-        font-size: 22px;
-    }
-
-    .balance_overview img {
-        margin: 20px auto;
-    }
-
-    .purpleButton {
-        width: 90% !important;
-        padding: 10px;
-    }
-
-    #cryptoOptions {
-        right: 10px;
-        top: 10px;
-        width: auto;
-    }
-
-    .slider-wrapper {
-        height: auto;
-    }
-
-    ul.currencies_grafs {
-        flex-wrap: wrap;
-        justify-content: center;
-        position: static;
-    }
-
-    .currencies_grafs li {
-        margin: 10px;
-    }
-
-    .scroll-button {
-        display: none;
-    }
-
-    .cryptoChart,
-    .diagram-container {
-        width: 95% !important;
-        flex-direction: column;
-        height: auto;
-    }
-
-    .diagram {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #cryptoPieCanvas {
-        width: 90%;
-        height: auto;
-    }
-
-    #pieLegend {
-        width: 100%;
-        text-align: center;
-    }
 
     table {
         font-size: 12px;
@@ -1590,14 +1472,6 @@ ul.currencies_grafs {
         align-items: center;
     }
 
-    .big_img_container,
-    .balance_overview,
-    .records_overview,
-    .graphs_diagrams {
-        width: 90% !important;
-        margin: 0 auto 20px auto;
-    }
-
     .big_img_container {
         flex-direction: column;
         text-align: center;
@@ -1658,16 +1532,7 @@ ul.currencies_grafs {
     }
 
     .mobile-layout {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start !important;
-        gap: 20px;
-        padding: 30px;
-        background-color:#1A0E2A;
-        border-radius: 30px;
         max-width: 400px;
-        margin-top:20px;
-        color: white;
     }
 
     .mobile_header div {
@@ -1743,8 +1608,6 @@ ul.currencies_grafs {
 
     .section-mobile-table{
         max-width: 400px;
-        margin-top:0px;
-
     }
     .mobile-overview{
         max-height: 280px;
@@ -1784,8 +1647,6 @@ ul.currencies_grafs {
     }
 
     .currencies_grafs li {
-        width: 100%;
-        max-width: 100%;
         height: 150px;
         margin-top: 40px;
     }
@@ -1848,3 +1709,96 @@ ul.currencies_grafs {
     }
 }
 
+@media screen and (max-width: 450px) {
+    .mobile-layout{
+        max-width: 300px;
+    }
+    .mobile_header h5{
+        font-size: 20px;
+    }
+    .mobile_header h1{
+        font-size: 30px;
+    }
+    .mobile_header div p {
+        font-size: 14px;
+    }
+
+    .mobile_balance h3 {
+        font-size: 20px;
+    }
+    .balance_row p {
+        font-size: 16px;
+    }
+    .purpleButton{
+        font-size: 16px;
+    }
+    .balance_row img {
+        width: 50px;
+        height: 50px;
+    }
+
+
+    .section-mobile-table{
+        max-width: 300px;
+    }
+    .mobile-overview{
+        max-height: 200px;
+    }
+    .balance_row {
+        margin-bottom: 10px;
+    } 
+    .balance_row .label {
+        font-size: 12px;
+    }
+    .mobile-overview .row {
+        margin-top: 5px;
+    }
+    .mobile-overview .row h3{
+        font-size: 18px;
+        margin-left: 10px;
+    }
+    .mobile-reset-data-button{
+        width:30% !important;
+        font-size: 12px;
+        margin-right: 10px;
+    }
+    .mobile-overview table thead tr th{
+        font-size: 12px;
+    }
+    td{
+       font-size: 12px; 
+    }
+    .slider-wrapper{
+        max-width: 250px;
+        margin-top: 10px;
+    }
+     
+    .currencies_grafs li {
+        width: 100%;
+        max-width: 250px;
+        height: 150px;
+        margin-top: 30px;
+    }
+    .currencies_grafs li:first-of-type {
+        margin-top: 40px;
+    }
+    .currencies_grafs li img{
+        width: 50px;
+        height: 50px;
+        left: calc(50% - 20px);
+        top: -25px;
+    }
+    .currencies_grafs li h6{
+        font-size: 14px;
+        margin-top:20px;
+    }
+    .currencies_grafs li div{
+        font-size: 14px;
+    }
+    .cryptoChart,
+    .diagram-container {
+        width: 95% !important;
+        flex-direction: column;
+        height: auto;
+    }
+}
